test/libsolidity/syntaxTests/array/length/tuples.sol
contract C {
    uint[(1,2)] a15;
}
// ----
// TypeError 5462: (22-27): Invalid array length, expected integer literal or constant expression.
